<resources>
    <!--Main app-->
    <string name="app_name">iipzs</string>
    <string name="title_activity_main">Icil Icafal PZS S.A.</string>

    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Nombre de usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_email">El correo electrónico es inválido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">El campo es requerido</string>
    <string name="permission_rationale">"Necesario para proveer autocompletado de direcciones."</string>
    <string name="error_login">"Error en datos de acceso."</string>

    <!--Drawer-->
    <string name="nav_ce">Inspecciones</string>
    <string name="nav_partidas">Partidas</string>
    <string name="nav_preferences">Preferencias</string>
    <string name="nav_logout">Cerrar sesión</string>

    <!-- Menú -->
    <string name="action_agree">Aceptar</string>
    <string name="action_update">Actualizar</string>
    <string name="action_create">Crear</string>
    <string name="action_save">Guardar</string>
    <string name="action_close">Cerrar</string>
    <string name="action_cancel">Cancelar</string>

    <!-- Control de estandar -->
    <string name="title_activity_nuevo_ceform">Nueva Inspección</string>
    <string name="ce_fecha">Fecha</string>
    <string name="ce_km_inicio">Kilómetro de inicio</string>
    <string name="ce_sync_msg">¿Cargar Inspección al servidor?</string>
    <string name="ce_delete_msg">¿Eliminar Inspección?</string>
    <string name="inspeccion_delete">Eliminar</string>
    <string name="inspeccion_upload">Cargar</string>
    <string name="inspeccion_uploaded">Cargado</string>

    <!-- GeoVia -->
    <string name="geometria_via">Geometría de la vía</string>
    <string name="geovia_delete_msg">¿Eliminar %1$s?</string>

    <!--Aux-->
    <string name="empty_text"></string>
    <string name="no_data">No existen datos.</string>
    <string name="title_activity_nuevo_ce">Inspección:&#160;</string>

    <!-- Preferences -->
    <string name="title_category_visual">Preferencias de visualización</string>
    <string name="title_columns_grid_number">Columnas de grilla</string>
    <string name="summary_columns_grid_number">Número de columnas utilizadas en cada grilla</string>
    <string name="one_columns_grid_number">Una columna</string>
    <string name="two_columns_grid_number">Dos columnas</string>
    <string name="three_columns_grid_number">Tres columnas</string>
    <string name="four_columns_grid_number">Cuatro columnas</string>

    <!-- Buttons -->
    <string name="date_ce">Fecha Inspección</string>
    <string name="btn_plus1">+1</string>
    <string name="btn_plus10">+10</string>
    <string name="ok">Ok</string>

    <string name="text_observaciones">Observaciones</string>
    <string name="text_cont">00</string>
    <string name="text_partida">Partida a realizar</string>

</resources>
