<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_rows"
        android:icon="@drawable/ic_view_column_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_columns_grid_number" >
        <menu>
            <item
                android:id="@+id/action_one_row"
                android:title="@string/one_columns_grid_number" />
            <item
                android:id="@+id/action_two_row"
                android:title="@string/two_columns_grid_number" />
            <item
                android:id="@+id/action_three_row"
                android:title="@string/three_columns_grid_number" />
            <item
                android:id="@+id/action_four_row"
                android:title="@string/four_columns_grid_number" />
        </menu>
    </item>
</menu>
